[package]
name = "chapter9"
version = "0.1.0"
authors = ["peshwar9"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "message-passing"
path = "src/message-passing.rs"

[[bin]]
name = "shared-state"
path = "src/shared-state.rs"

[dependencies]
