[package]
name = "feature-test"
version = "0.1.0"
authors = ["peshwar9 <par.esh1937@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "featuretest"
path = "src/main.rs"

[features]
feature1 = []

[dependencies]
